# SkillViewer

./: .gitignore  README.md  README.zh-CN.md  electron-builder.yml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.node.json  tsup.config.ts  vite.config.ts
market/: demo-curated.json  demo-labs.json
skills-manager-main/: .gitignore  README.md  package.json  pnpm-lock.yaml  skills-manager.key.pub
skills-manager-main/.clawdbot/: active-tasks.json
skills-manager-main/.clawdbot/scripts/: check-agents.sh  cleanup.sh  spawn-agent.sh
skills-manager-main/.github/scripts/: build-latest-json.js  extract-changelog.js  stage-release-assets.js
skills-manager-main/.github/workflows/: deploy-website.yml  release-updater.yml  (+2 more)
skills-manager-main/config/: mcporter.json
skills-manager-main/scripts/: release.js
skills-manager-main/src/: App.vue  i18n.ts  main.ts
skills-manager-main/src-tauri/: Cargo.toml  tauri.conf.json
skills-manager-main/src-tauri/capabilities/: default.json
skills-manager-main/src-tauri/icons/: icon.icns
skills-manager-main/src-tauri/src/: lib.rs  main.rs  types.rs
skills-manager-main/src-tauri/src/commands/: market.rs  mod.rs  skills.rs
skills-manager-main/src-tauri/src/utils/: download.rs  mod.rs  path.rs  security.rs
skills-manager-main/website/: astro.config.mjs  package-lock.json  package.json  tsconfig.json
src/: App.tsx  electron-env.d.ts  i18n.ts  index.css  main.tsx
src-electron/: main.ts  market-service.ts  preload.ts  skill-service.ts  state-store.ts
src/shared/: contracts.ts
(+29 files in other folders)
